--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     compile 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
     compile 'net.sf.opencsv:opencsv:2.0'
 
+    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
+    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
+    annotationProcessor "com.google.guava:guava:21.0"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
