--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,10 @@ artifactory {
     }
 }
 
+artifactoryPublish {
+    publishConfigs("archives")
+}
+
 processResources {
     from (sourceSets.main.resources.srcDirs) {
         expand 'internalVersion': project.internalVersion
