--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,9 @@ dependencies {
     compile 'com.sk89q.worldedit:worldedit-core:7.1.0-SNAPSHOT'
     compile 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
     compile 'org.enginehub.jinglenote:jinglenote-core:1.0.0-SNAPSHOT'
-    compile 'org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT'
+    compile('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
+        exclude group: 'org.spigotmc', module: 'spigot-api'
+    }
     compile 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
     compile 'net.sf.opencsv:opencsv:2.0'
 
