--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         name = 'sk89q-repo'
@@ -69,9 +70,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.destroystokyo.paper:paper-api:1.15.1-R0.1-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-core:7.1.0-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
+    compile 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
+    compile 'com.sk89q.worldedit:worldedit-core:7.2.0-SNAPSHOT'
+    compile 'com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT'
     compile 'org.enginehub.jinglenote:jinglenote-core:1.0.0-SNAPSHOT'
     compile('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
         exclude group: 'org.spigotmc', module: 'spigot-api'
@@ -79,8 +80,8 @@ dependencies {
     compile 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
     compile 'net.sf.opencsv:opencsv:2.0'
 
-    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
-    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
+    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
     annotationProcessor "com.google.guava:guava:21.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
