--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ buildscript {
     }
 }
 
-if (!project.hasProperty("artifactory_contextUrl")) ext.artifactory_contextUrl = "http://localhost"
-if (!project.hasProperty("artifactory_user")) ext.artifactory_user = "guest"
+if (!project.hasProperty("artifactory_contextUrl")) ext.artifactory_contextUrl = ""
+if (!project.hasProperty("artifactory_user")) ext.artifactory_user = ""
 if (!project.hasProperty("artifactory_password")) ext.artifactory_password = ""
 
 if (!project.hasProperty("gitCommitHash")) {
@@ -45,13 +45,13 @@ if (!project.hasProperty("gitCommitHash")) {
 }
 
 apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'com.jfrog.artifactory'
 
 group = pluginGroup
 version = pluginVersion
-ext.internalVersion = version + ";" + gitCommitHash
+ext.internalVersion = pluginVersion + ";" + gitCommitHash
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -60,8 +60,8 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        name = 'sk89q-repo'
-        url = 'http://maven.sk89q.com/repo/'
+        name = 'EngineHub Repo'
+        url = 'https://maven.enginehub.org/repo/'
     }
     maven {
         name = 'Destroystokyo Repo'
@@ -70,21 +70,21 @@ repositories {
 }
 
 dependencies {
-    compile 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-core:7.2.0-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT'
-    compile 'org.enginehub.jinglenote:jinglenote-core:1.0.0-SNAPSHOT'
-    compile('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
+    compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit:worldedit-core:7.2.0-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT'
+    compileOnly 'org.enginehub.jinglenote:jinglenote-core:1.0.0-SNAPSHOT'
+    implementation('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
         exclude group: 'org.spigotmc', module: 'spigot-api'
     }
-    compile 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
-    compile 'net.sf.opencsv:opencsv:2.0'
+    implementation 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
+    implementation 'net.sf.opencsv:opencsv:2.0'
 
     compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
     annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
     annotationProcessor "com.google.guava:guava:21.0"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -101,6 +101,18 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+
+            from components.java
+
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
+}
+
 artifacts {
     archives shadowJar
     archives sourcesJar
@@ -113,7 +125,7 @@ build.dependsOn(javadocJar)
 jar {
     manifest {
         attributes("Class-Path": "CommandBook/WorldEdit.jar lib/WorldEdit.jar ../lib/WorldEdit.jar ../WorldEdit.jar",
-                   "WorldEdit-Version": version)
+                   "CommandBook-Version": pluginVersion)
     }
 }
 
@@ -121,9 +133,11 @@ shadowJar {
     classifier 'dist'
 
     dependencies {
-        include(dependency('net.sf.opencsv:opencsv'))
         include(dependency('com.zachsthings.libcomponents:libcomponents-bukkit'))
-        relocate ("org.enginehub.jinglenote", "com.sk89q.commandbook.enginehub.jinglenote") {
+        relocate ("au.com.bytecode.opencsv", "com.sk89q.commandbook.shaded.opencsv") {
+            include(dependency('net.sf.opencsv:opencsv'))
+        }
+        relocate ("org.enginehub.jinglenote", "com.sk89q.commandbook.shaded.jinglenote") {
             include(dependency("org.enginehub.jinglenote:jinglenote-core"))
             include(dependency("org.enginehub.jinglenote:jinglenote-bukkit"))
         }
@@ -142,7 +156,6 @@ artifactory {
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
-
         }
     }
 
