--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
         exclude group: 'org.spigotmc', module: 'spigot-api'
     }
+    implementation 'com.zachsthings.libcomponents:libcomponents-core:1.3.0-SNAPSHOT'
     implementation 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.0-SNAPSHOT'
     implementation 'net.sf.opencsv:opencsv:2.0'
 
@@ -133,6 +134,7 @@ shadowJar {
     classifier 'dist'
 
     dependencies {
+        include(dependency('com.zachsthings.libcomponents:libcomponents-core'))
         include(dependency('com.zachsthings.libcomponents:libcomponents-bukkit'))
         relocate ("au.com.bytecode.opencsv", "com.sk89q.commandbook.shaded.opencsv") {
             include(dependency('net.sf.opencsv:opencsv'))
